--- a/source/index.html
+++ b/source/index.html
@@ -450,8 +450,7 @@
           <ul class="categories__list">
             <li class="categories__item">
               <picture>
-                <source srcset="img/w1test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-1.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w1test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="catalog.html">
                 Медицина
@@ -460,8 +459,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/w2test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-2.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w2test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
                 Детство
@@ -470,8 +468,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/w3test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-3.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w3test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
                 Beauty
@@ -480,8 +477,7 @@
             </li>
             <li class="categories__item" >
               <picture>
-                <source srcset="img/w4test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-4.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w4test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
                 Size+
@@ -490,8 +486,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/w5test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-5.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w5test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
                 Буду мамой
@@ -500,8 +495,7 @@
             </li>
             <li class="categories__item">
               <picture>
-                <source srcset="img/w6test.png" media="(min-width: 760px)">
-                <img class="categories__img" src="img/woman-6.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
+                <img class="categories__img" src="img/w6test.png" alt="Пример одежды из категории &laquo;Медицина&raquo;">
               </picture>
               <a class="categories__link" href="#">
                 Спецодежда
@@ -524,7 +518,7 @@
                 <picture>
                   <source srcset="img/popular-woman-1-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-1-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-1.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/w2test.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
 
                 <div class="popular-product__overlay">
@@ -571,7 +565,7 @@
                 <picture>
                   <source srcset="img/popular-woman-2-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-2-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-2.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/popular-woman-2-desktop.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
                 <div class="popular-product__overlay">
                   <h4 class="popular-product__overlay-heading">Доступные размеры</h4>
@@ -617,7 +611,7 @@
                 <picture>
                   <source srcset="img/popular-woman-3-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-3-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/w6test.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
                 <div class="popular-product__overlay">
                   <h4 class="popular-product__overlay-heading">Доступные размеры</h4>
@@ -663,7 +657,7 @@
                 <picture>
                   <source srcset="img/popular-woman-2-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-2-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-2.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/popular-woman-2-desktop.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
                 <div class="popular-product__overlay">
                   <h4 class="popular-product__overlay-heading">Доступные размеры</h4>
@@ -709,7 +703,7 @@
                 <picture>
                   <source srcset="img/popular-woman-3-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-3-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/w6test.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
                 <div class="popular-product__overlay">
                   <h4 class="popular-product__overlay-heading">Доступные размеры</h4>
@@ -755,7 +749,7 @@
                 <picture>
                   <source srcset="img/popular-woman-3-desktop.png" media="(min-width: 1170px)">
                   <source srcset="img/popular-woman-3-tablet.png" media="(min-width: 760px)">
-                  <img src="img/popular-woman-3.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
+                  <img src="img/w6test.png" alt="Изображение костюма К-74 &laquo;Фаина&raquo;">
                 </picture>
                 <div class="popular-product__overlay">
                   <h4 class="popular-product__overlay-heading">Доступные размеры</h4>
