Исправлены иконки глаза в карточках товаров

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -840,11 +840,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -886,11 +886,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -932,11 +932,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -978,11 +978,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1024,11 +1024,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1070,11 +1070,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1116,11 +1116,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1162,11 +1162,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1208,11 +1208,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
 
@@ -1254,11 +1254,11 @@
                   <p class="catalog-card__price">
                     900 руб
                   </p>
-                  <button class="catalog-card__watch">
+                  <a class="catalog-card__watch" href="#">
                     <svg>
                       <use xlink:href="#spr-view"></use>
                     </svg>
-                  </button>
+                  </a>
                 </div>
               </li>
             </ul>
