Сделана планшетная версия быстрого просмотра

--- a/source/index.html
+++ b/source/index.html
@@ -1389,10 +1389,10 @@
         <div class="popups__popup  popup-quick-view">
           <form class="popup-quick-view__form">
             <div class="popup-quick-view__img-container">
-              <img class="popup-quick-view__main-img" src="img/quick-view-photo.jpg" width="259" height="355" alt="Пример одежды">
-              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-1.jpg" width="72" height="73" alt="Пример одежды">
-              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-2.jpg" width="72" height="73" alt="Пример одежды">
-              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-3.jpg" width="72" height="73" alt="Пример одежды">
+              <img class="popup-quick-view__main-img" src="img/quick-view-photo.jpg" alt="Пример одежды">
+              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-1.jpg" alt="Пример одежды">
+              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-2.jpg" alt="Пример одежды">
+              <img class="popup-quick-view__img-preview" src="img/quick-view-miniature-3.jpg" alt="Пример одежды">
             </div>
             <div class="popup-quick-view__inputs">
               <fieldset class="popup-quick-view__fieldset">
